--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <link rel="shortcut icon" href="/assets/logo.webp" type="image/x-icon">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
                         rel="stylesheet">
             <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
@@ -20,6 +21,52 @@
 </head>
 
 <body class="font-lato">
+            <header>
+                        <nav>
+                                    <div class="navbar bg-base-100 shadow-sm">
+                                                <div class="navbar-start gap-2">
+                                                            <a class="flex flex-row gap-1 justify-center items-center text-3xl font-bold"> 
+                                                                        <img src="assets/logo.webp" alt="logo" class="w-7 h-7">
+                                                                        Peddy
+                                                            </a>
+                                                </div>
+                                                <div class="navbar-center hidden lg:flex">
+                                                            <ul class="menu menu-horizontal px-1 font-bold text-[16px]">
+                                                                        <li><a>Home</a></li>
+                                                                        <li><a>Shop</a></li>
+                                                                        <li><a>Contact</a></li>
+                                                            </ul>
+                                                </div>
+                                                <div class="navbar-end gap-2">
+                                                            <span class="btn text-xl font-normal bg-base-100 border border-gray-300 px-2 rounded-full">
+                                                                        <i class="ri-user-3-line"></i>
+                                                            </span>
+                                                            <div class="dropdown dropdown-end">
+                                                                        <div tabindex="0" role="button"
+                                                                                    class="btn lg:hidden font-normal bg-base-100 border border-gray-300 px-[9px] rounded-full">
+                                                                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                                                                                class="h-5 w-5"
+                                                                                                fill="none"
+                                                                                                viewBox="0 0 24 24"
+                                                                                                stroke="currentColor">
+                                                                                                <path stroke-linecap="round"
+                                                                                                            stroke-linejoin="round"
+                                                                                                            stroke-width="2"
+                                                                                                            d="M4 6h16M4 12h8m-8 6h16" />
+                                                                                    </svg>
+                                                                        </div>
+                                                                        <ul tabindex="0"
+                                                                                    class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow font-bold text-[16px]">
+                                                                                    <li><a>Home</a></li>
+                                                                                    <li><a>Shop</a></li>
+                                                                                    <li><a>Contact</a></li>
+                                                                        </ul>
+                                                            </div>
+                                                </div>
+                                    </div>
+                        </nav>
+            </header>
+
             <script src="script.js"></script>
 </body>
 
