--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="light" class="scroll-smooth">
 
 <head>
             <meta charset="UTF-8">
@@ -62,16 +62,30 @@
             <main class="container mx-auto">
                         <div class="flex flex-col justify-center items-center gap-5 mt-10">
                                     <p class="text-[16px] md:text-xl">Bringing Families Together ❤️</p>
-                                    <h1 class="text-2xl md:text-7xl font-bold text-center md:w-[800px]">Your Path to
-                                                Adoption Starts Here</h1>
+                                    <h1 class="text-2xl md:text-7xl font-bold text-center md:w-[800px]">
+                                                Your Path to Adoption Starts Here
+                                    </h1>
                                     <p class="text-[16px] md:text-xl text-center w-[320px] md:w-[800px]">
                                                 We are a team of animal lovers. We provide a perfect place where you can find pets that you want. 
                                                 Checkout some of our collections. Give them a perfect life.
                                     </p>
-                                    <button class="btn bg_primary text-white">View More</button>
+                                    <button class="btn bg_primary text-white">
+                                                <a href="#pet_collection">View More</a>
+                                    </button>
                                     <img src="assets/pet.webp" alt="hero image">
                         </div>
             </main>
+            <section class="container mx-auto my-20" id="pet_collection">
+                        <div class="flex flex-col justify-center items-center gap-5 mt-10">
+                                    <h1 class="text-2xl md:text-5xl font-bold text-center md:w-[800px]">
+                                                Adopt  Your  Best Friend
+                                    </h1>
+                                    <p class="text-[16px] md:text-xl text-center w-[320px] md:w-[800px]">
+                                                Adopt a pet as you like. Check some pets categories down below.
+                                    </p>
+                                    <div id="button_collection" class="grid grid-cols-2 md:grid-cols-4 gap-3 md:gap-10 mt-10"></div>
+                        </div>
+            </section>
 
             <script src="script.js"></script>
 </body>
