--- a/index.html
+++ b/index.html
@@ -12,18 +12,7 @@
                         rel="stylesheet">
             <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
             <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-            <style>
-                        .font-lato {
-                                    font-family: "Lato", sans-serif;
-                        }
-
-                        .bg_primary {
-                                    background: #0E7A81;
-                        }
-                        .text_primary {
-                                    color: #0E7A81;
-                        }
-            </style>
+            <link rel="stylesheet" href="style.css">
             <title>Peddy | Pet Adoption</title>
 </head>
 
@@ -75,13 +64,13 @@
                                                 find pets that you want.
                                                 Checkout some of our collections. Give them a perfect life.
                                     </p>
-                                    <button class="btn bg_primary text-white">
-                                                <a href="#pet_collection">View More</a>
+                                    <button class="btn bg_primary text-white" onclick="show_all_item()"> 
+                                                <a href="#pets">View More</a>
                                     </button>
                                     <img src="assets/pet.webp" alt="hero image">
                         </div>
             </main>
-            <section class="container mx-auto my-20" id="pet_collection">
+            <section class="container mx-auto my-20">
                         <div class="flex flex-col justify-center items-center gap-5 mt-10">
                                     <h1 class="text-2xl md:text-5xl font-bold text-center md:w-[800px]">
                                                 Adopt Your Best Friend
@@ -97,9 +86,9 @@
                                     <button class="btn bg_primary text-white px-8">Sort by Price</button>
                         </div>
             </section>
-            <section class="w-11/12 mx-auto my-20 flex flex-col md:flex-row justify-center gap-5">
+            <section class="w-11/12 mx-auto my-20 flex flex-col md:flex-row justify-center gap-5" id="pets">
                         <div id="items_container" class="grid grid-cols-1 md:grid-cols-3 items-center gap-5"></div>
-                        <div class="card card-border shadow bg-base-100 w-[280px] min-h-screen">
+                        <div class="card card-border mx-auto md:mx-0 shadow bg-base-100 w-[280px] min-h-screen">
                                     <div class="card-body"></div>
                         </div>
             </section>
