--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     <img src="assets/pet.webp" alt="hero image">
                         </div>
             </main>
-            <section class="container mx-auto my-20">
+            <section class="container mx-auto my-10">
                         <div class="flex flex-col justify-center items-center gap-5 mt-10">
                                     <h1 class="text-2xl md:text-5xl font-bold text-center md:w-[800px]">
                                                 Adopt Your Best Friend
@@ -85,8 +85,9 @@
                                     <h2 class="text-xl md:text-2xl font-semibold">Best Deal For you</h2>
                                     <button class="btn bg_primary text-white px-8">Sort by Price</button>
                         </div>
+                        <span class="text-3xl left-[45%] top-[50%] relative z-[99999] hidden" id="loader">Loading......</span>
             </section>
-            <section class="w-11/12 mx-auto my-20 flex flex-col md:flex-row justify-center gap-5" id="pets">
+            <section class="w-11/12 mx-auto my-10 flex flex-col md:flex-row justify-center gap-5" id="pets">
                         <div id="items_container" class="grid grid-cols-1 md:grid-cols-3 items-center gap-5"></div>
                         <div class="card card-border mx-auto md:mx-0 shadow bg-base-100 w-[280px] min-h-screen">
                                     <div class="card-body"></div>
@@ -102,7 +103,6 @@
                                     </div>
                         </dialog>
             </section>
-
             <script src="script.js"></script>
 </body>
 
