checking undefined data and showing Unavailable

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                                 class="grid grid-cols-2 md:grid-cols-4 gap-3 md:gap-14 mt-10"></div>
                         </div>
                         <div class="flex flex-rows justify-between items-center mt-10 mx-5 md:w-9/12 md:mx-auto">
-                                    <h2 class="text-xl md:text-2xl font-semibold">Best Deal For you</h2>
+                                    <h2 class="text-xl md:text-2xl font-normal md:font-semibold">Best Deal For you</h2>
                                     <span class="loading loading-dots loading-xl left-[45%] top-[50%] z-[99999]" id="loader"></span>
                                     <button class="btn bg_primary text-white px-8">Sort by Price</button>
                         </div>
