showing liked pets dynamically

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             </section>
             <section class="w-11/12 mx-auto my-10 flex flex-col md:flex-row justify-center gap-5" id="pets">
                         <div id="items_container" class="grid grid-cols-1 md:grid-cols-3 items-center gap-5"></div>
-                        <div class="card card-border mx-auto md:mx-0 shadow bg-base-100 w-[280px] min-h-screen">
-                                    <div class="card-body"></div>
+                        <div class="card card-border items-center mx-auto md:mx-0 shadow bg-base-100 w-[280px]">
+                                    <div class="mt-5 grid grid-cols-2 gap-5 justify-center items-center" id="liked_pets"></div>
                         </div>
                         <dialog id="open_modal" class="modal">
                                     <div class="modal-box p-0">
