adoption button behavior complete

--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
                                     <div id="description-container"></div>
                                     </div>
                         </dialog>
+                        <dialog id="open_modal_adopt" class="modal">
+                                    <div class="modal-box p-0">
+                                                <form method="dialog">
+                                                            <button
+                                                                        class="btn btn-sm btn-circle bg_primary text-white shadow-0 absolute right-2 top-2">✕
+                                                            </button>
+                                                </form>
+                                    <div id="adopt-container" class="py-10 text-center flex flex-col gap-3"></div>
+                                    </div>
+                        </dialog>
             </section>
             <script src="script.js"></script>
 </body>
